css/styles2.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}



@font-face {
    font-family: 'scoreBoard';
    src: url('fonts/Digitaldismay.otf');
} 

body {
    margin:0;
    padding:0;
    overflow: hidden;
    background-color: #fff;
    color: #000;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }

#parentContainer {
    height: 70vh;
    width: 50vw;
    display: grid;
    grid-template-columns: 
        [rock-start] 3fr
        [rock-end] 1fr
        [paper-start round-start] 2fr
        [player-end empty-space] 1fr
        [computer-start] 2fr
        [round-end] 1fr
        [paper-end] 2fr
        [scissors-start] 1fr
        [computer-end] 3fr;
    grid-template-rows: 
        [player-name] 1fr 
        [player-choice] 4fr 
        [score-title] .5fr 
        [score] .5fr 
        [round-num] 2fr
        [round-message] 2fr 
        [rps] 4fr;
    grid-template-areas:
        ". playerTitle playerTitle playerTitle . CompName CompName CompName ."
        ". pChoice pChoice pChoice . cChoice cChoice cChoice ."
        ". pScoreMess pScoreMess pScoreMess . cScoreMess cScoreMess cScoreMess ."
        ". pScore pScore pScore . cScore cScore cScore ."
        ". . . roundNum roundNum roundNum . . ."
        "roundMess roundMess roundMess roundMess roundMess roundMess roundMess roundMess roundMess"
        "rockCont rockCont . paperCont paperCont paperCont . scissorsCont scissorsCont";
    justify-items: center;
    align-items: end;
    text-align: center;
    margin: auto;
    top: 50%;
}

.choiceGrid {
    height: 100%;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    justify-items: center;
    align-items: end;
    text-align: center;
    margin: auto;
}

#player {
    grid-template-areas: "playerImg";
}

#computer {
    grid-template-areas: "compImg";
}

#pChoiceTitle {
    grid-area: playerTitle;
    border-bottom: 1px solid #000;
    margin-top: 10px;
}

#cChoiceTitle {
    grid-area: CompName;
    border-bottom: 1px solid #000;
    margin-top: 10px;
}

#player {
    grid-area: pChoice;
    object-fit: contain;
    align-self: end;
}

#playerImg {
    grid-area: playerImg;
}


#computer {
    grid-area: cChoice;
    object-fit: contain;
    align-self: end;
}

#computerImg {
    grid-area: compImg;
}

#pScoreTitle {
    grid-area: pScoreMess;
}

#cScoreTitle {
    grid-area: cScoreMess;
}

#playerScore {
    grid-area: pScore;
    font-family: scoreBoard;
    font-size: 50px;
}

#compScore {
    grid-area: cScore;
    font-family: scoreBoard;
    font-size: 50px;
}

#roundNum {
    grid-area: roundNum;
    font-size: 30px;
    height: 30px;
}

#game {
    grid-area: roundMess;
}

#rock {
    grid-area: rockCont;
}

#scissors {
    grid-area: scissorsCont;
}

#paper {
    grid-area: paperCont;
}

img {
    object-fit: contain;
    min-width: 80%;
    max-width: 175px;
    min-height: 80%;
    max-height: 80%;
}

#h1 {
    font-size: 30px;
}

